--- a/defconfig/opir2s_defconfig
+++ b/defconfig/opir2s_defconfig
@@ -6,6 +6,9 @@ CONFIG_TARGET_ROOTFS_PARTSIZE=400
 
 CONFIG_KERNEL_DEVTMPFS=y
 
+CONFIG_DEVEL=y
+CONFIG_KERNEL_CFLAGS="-Wno-vla"
+
 CONFIG_PACKAGE_openssh-sftp-server=y
 CONFIG_PACKAGE_wpa-supplicant=y
 CONFIG_PACKAGE_hostapd=y
