--- a/defconfig/opir2s_defconfig
+++ b/defconfig/opir2s_defconfig
@@ -4,85 +4,19 @@ CONFIG_TARGET_ky_riscv64_DEVICE_x1_orangepi-r2s=y
 CONFIG_TARGET_KERNEL_PARTSIZE=100
 CONFIG_TARGET_ROOTFS_PARTSIZE=400
 
-CONFIG_KERNEL_DEVTMPFS=y
-
 CONFIG_DEVEL=y
 CONFIG_KERNEL_CFLAGS="-Wno-vla"
+CONFIG_KERNEL_DEVTMPFS=y
 
-CONFIG_PACKAGE_openssh-sftp-server=y
-CONFIG_PACKAGE_wpa-supplicant=y
-CONFIG_PACKAGE_hostapd=y
-# CONFIG_BRCMFMAC_USB is not set
-# CONFIG_BRCMFMAC_PCIE is not set
-
+CONFIG_PACKAGE_blkid=y
+CONFIG_PACKAGE_curl=y
 # CONFIG_PACKAGE_dnsmasq is not set
 CONFIG_PACKAGE_dnsmasq-full=y
-CONFIG_PACKAGE_iperf3=y
-CONFIG_PACKAGE_docker=y
-CONFIG_PACKAGE_dockerd=y
-CONFIG_PACKAGE_rsync=y
-CONFIG_PACKAGE_rsyncd=y
-CONFIG_PACKAGE_openssh-sftp-server=y
-CONFIG_PACKAGE_iptables-mod-conntrack-extra=y
-CONFIG_PACKAGE_iptables-mod-ipopt=y
-CONFIG_PACKAGE_iptables-mod-tproxy=y
-CONFIG_PACKAGE_zerotier=y
-CONFIG_PACKAGE_wpa-supplicant=y
-CONFIG_PACKAGE_uhttpd=y
-CONFIG_PACKAGE_uhttpd-mod-ubus=y
-CONFIG_PACKAGE_hostapd=y
-CONFIG_PACKAGE_ifstat=y
-CONFIG_PACKAGE_iftop=y
-CONFIG_PACKAGE_ipset=y
-CONFIG_PACKAGE_netperf=y
-CONFIG_PACKAGE_squid=y
-CONFIG_PACKAGE_tcpdump=y
-CONFIG_PACKAGE_speedtest-netperf=y
+CONFIG_PACKAGE_ethtool=y
 CONFIG_PACKAGE_htop=y
-CONFIG_PACKAGE_libusb-1.0=y
-CONFIG_PACKAGE_blkid=y
-
-CONFIG_LUCI_LANG_zh_Hans=y
-CONFIG_PACKAGE_luci-app-dockerman=y
-CONFIG_PACKAGE_luci-app-ttyd=y
-CONFIG_PACKAGE_luci-app-samba4=y
-CONFIG_PACKAGE_luci-app-statistics=y
-CONFIG_PACKAGE_luci-app-transmission=y
-CONFIG_PACKAGE_luci-app-commands=y
-CONFIG_PACKAGE_luci-app-vnstat2=y
-# CONFIG_PACKAGE_luci-theme-argon is not set
-CONFIG_PACKAGE_luci-app-aria2=y
-CONFIG_PACKAGE_luci-app-ddns=y
-CONFIG_PACKAGE_luci-app-watchcat=y
-CONFIG_PACKAGE_luci-app-adblock=y
-CONFIG_PACKAGE_luci-app-nlbwmon=y
-CONFIG_PACKAGE_luci-app-ntpc=y
-CONFIG_PACKAGE_luci-app-mwan3=y
-CONFIG_PACKAGE_luci-app-qos=y
-CONFIG_PACKAGE_luci-app-unbound=y
-
-CONFIG_PACKAGE_kmod-mt76x0u=y
-CONFIG_PACKAGE_kmod-mt7601u=y
-CONFIG_PACKAGE_kmod-mt76x2u=y
-CONFIG_PACKAGE_kmod-rtl8812au-ct=y
-CONFIG_PACKAGE_kmod-rtl8821ae=y
-CONFIG_PACKAGE_kmod-rtl8xxxu=y
-CONFIG_PACKAGE_kmod-ipt-nat6=y
-CONFIG_PACKAGE_kmod-nf-nat6=y
-CONFIG_PACKAGE_kmod-usb-serial-option=y
-CONFIG_PACKAGE_mt7601u-firmware=y
-CONFIG_PACKAGE_rtl8188eu-firmware=y
-CONFIG_PACKAGE_rtl8723au-firmware=y
-CONFIG_PACKAGE_rtl8723bu-firmware=y
-CONFIG_PACKAGE_rtl8821ae-firmware=y
-CONFIG_PACKAGE_iw=y
-CONFIG_PACKAGE_iwinfo=y
-CONFIG_PACKAGE_kmod-mac80211=y
-CONFIG_PACKAGE_kmod-cfg80211=y
-CONFIG_PACKAGE_kmod-rtw88-8821cu=y
-CONFIG_PACKAGE_rtl8723bu-firmware=y
-CONFIG_PACKAGE_rtl8723du-firmware=y
-CONFIG_PACKAGE_bcmdhd-firmware=y
-CONFIG_PACKAGE_kmod-rtl8xxxu=y
-CONFIG_PACKAGE_kmod-bcmdhd=y
+CONFIG_PACKAGE_lm-sensors-detect=y
+CONFIG_PACKAGE_lsblk=y
+CONFIG_PACKAGE_nano=y
+CONFIG_PACKAGE_tcpdump=y
 CONFIG_PACKAGE_usbutils=y
+CONFIG_PACKAGE_wget=y
